fix: changed toolbar to z-index 5

--- a/src/app/components/header/toolbar/toolbar.component.scss
+++ b/src/app/components/header/toolbar/toolbar.component.scss
@@ -3,6 +3,7 @@
   top: 0;
   height: 50px;
   padding: 32px 16px 16px 16px;
+  z-index: 5;
 
   .toolbar-items {
     height: 100%;
